--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "mockjs": "^1.0.1-beta3",
     "moment": "^2.18.1",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
